# LLMDataParser

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  app.py  docker-compose.yml  mkdocs.yml  nginx.conf  pyproject.toml
.github/workflows/: ci.yml  docker.yml  huggingface-sync.yml
docs/: POETRY_JUPYTER_SETUP.md  POETRY_USAGE.md  adding_new_parser.md
llmdataparser/: __init__.py  base_parser.py  bbh_parser.py  gsm8k_parser.py  humaneval_parser.py  ifeval_parser.py  math_parser.py  mbpp_parser.py  mgsm_parser.py  mmlu_parser.py  prompts.py  tmlu_parser.py  tw_legal_parser.py
notebooks/: demo.ipynb
tests/: test_bbh_parser.py  test_gsm8k_parser.py  test_humaneval_parser.py  test_ifeval_parser.py  test_math_parser.py  test_mbpp_parser.py  test_mgsm_parser.py  test_mmlu_parser.py  test_tmlu_parser.py  test_tw_legal_parser.py
